# miniRPC

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
benchmarks/: benchmark_rpc.cpp
cmake/: MiniRpcCodegen.cmake
configs/: registry.ini  server.ini
docs/: api.md  architecture.md  challenges.md  comparison.md  interview-questions.md  perf-report.md  resume-keyword-interview-answers.md  resume-keyword-interview-questions.md  tech-stack.md
docs/learning/: minirpc-deep-dive.md
examples/: calculator_client.cpp  calculator_server.cpp  calculator_service_impl.cpp  calculator_service_impl.h
idl/: calculator.mproto
include/minirpc/: buffer.h  channel.h  config.h  protocol.h  registry.h  server.h  status.h  thread_pool.h
src/: channel.cpp  config.cpp  protocol.cpp  registry.cpp  server.cpp  thread_pool.cpp
tests/: test_rpc_integration.cpp  test_runtime.cpp
tools/: mrpcgen.py  render_benchmark_report.py
